crates/nash-report/tests/parse/expression/snapshots/parse__expression__macro___error_double_comma.snap
---
source: crates/nash-report/tests/parse/expression/macro_.rs
assertion_line: 15
description: "Code:\n\nm!(1,,2)"
info: diagnostic
---
nash::syntax

  × Expected an expression in a macro invocation.
   ╭─[src/Main.nash:1:6]
 1 │ m!(1,,2)
   ·      ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
