crates/nash-report/tests/parse/expression/snapshots/parse__expression__macro___error_trailing_comma.snap
---
source: crates/nash-report/tests/parse/expression/macro_.rs
assertion_line: 10
description: "Code:\n\nm!(1,)"
info: diagnostic
---
nash::syntax

  × Expected an expression in a macro invocation.
   ╭─[src/Main.nash:1:6]
 1 │ m!(1,)
   ·      ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
