crates/nash-report/tests/parse/expression/snapshots/parse__expression__macro___error_unclosed.snap
---
source: crates/nash-report/tests/parse/expression/macro_.rs
assertion_line: 5
description: "Code:\n\nm!("
info: diagnostic
---
nash::syntax

  × Expected `(` after the macro marker `!`.
   ╭─[src/Main.nash:1:4]
 1 │ m!(
   ·    ─
   ╰────
  help: Write `name!(arguments)`.
